# moboware

./: .clang-format  CMakeLists.txt  README.md  config.json  vcpkg.json
playground/: CMakeLists.txt
playground/atomic_queue/: CMakeLists.txt  main.cpp
playground/binance_price_feed/: CMakeLists.txt  main.cpp
playground/boost_asio_ssl/: CMakeLists.txt  client.cpp  server.cpp
playground/boost_lockfree_queue/: CMakeLists.txt  main.cpp
playground/clock/: CMakeLists.txt  main.cpp
playground/embedded/: CMakeLists.txt  main.cpp
playground/eqvilent/: CMakeLists.txt  main.cpp
playground/lockfree_ringbuffer/: CMakeLists.txt  main.cpp
playground/lohmann_sax_parsing/: CMakeLists.txt  main.cpp
playground/market_data_feed/: CMakeLists.txt  binance_market_data_feed_handler.hpp  bitstamp_market_data_feed_handler.hpp  main.cpp  vwap_calculator.hpp
playground/meta_programming/: CMakeLists.txt  main.cpp
playground/new_logger/: CMakeLists.txt  logger.hpp  main.cpp
playground/ssl_client/: CMakeLists.txt  main.cpp
playground/ssl_server/: CMakeLists.txt  main.cpp
playground/tcp_client/: CMakeLists.txt  main.cpp
playground/tcp_server/: CMakeLists.txt  main.cpp
playground/template/: CMakeLists.txt  main.cpp
playground/web_socket_client/: CMakeLists.txt  main.cpp
playground/web_socket_server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/apps/server/: CMakeLists.txt  web_socket_server.cpp
src/lib/: CMakeLists.txt
src/lib/applications/: CMakeLists.txt  application.cpp
src/lib/applications/include/applications/: application.h
src/lib/channels/: CMakeLists.txt  web_socket_channel.cpp
src/lib/channels/include/channels/: web_socket_channel.h
src/lib/common/: CMakeLists.txt  application_base.cpp  channel_base.cpp  log.cpp  log_stream.cpp  new_log_stream.cpp  new_logger.cpp  service.cpp  session.cpp  tcp_client.cpp  tcp_server.cpp  timer.cpp
src/lib/common/include/common/: _log_stream.h  _log_stream_buf.h  application_base.h  channel_base.h  channel_interface.h  circular_buffer.hpp  imodule.h  imodule_factory.h  lock_less_ring_buffer.h  log.h  log_stream.h  log_stream_buf.h  logger.hpp  new_log_stream.h  new_logger.h  ring_buffer.hpp  service.h  session.h  singleton.h  tcp_client.h  tcp_server.h  timer.h  types.hpp  unordered_fast_map.hpp
src/lib/exchanges/: CMakeLists.txt
src/lib/exchanges/binance/: CMakeLists.txt  binance_price_feed.cpp  binance_price_session_handler.cpp  binance_stream_parser.cpp
src/lib/exchanges/binance/include/binance/: binance_market_data_feed.hpp  binance_market_data_session_handler.hpp  binance_price_feed.hpp  binance_price_session_handler.hpp  binance_stream_parser.hpp  book_ticker_stream_parser.hpp  orderbook_levels_snapshot_parser.hpp  trade_tick_stream_parser.hpp
src/lib/exchanges/bitstamp/: CMakeLists.txt  bitstamp_stream_parser.cpp
src/lib/exchanges/bitstamp/include/bitstamp/: binance_stream_parser.hpp  bitstamp_market_data_feed.hpp  bitstamp_market_data_session_handler.hpp  bitstamp_stream_parser.hpp  orderbook_levels_snapshot_parser.hpp  trade_tick_stream_parser.hpp
src/lib/exchanges/exchange/: CMakeLists.txt  exchange.cpp
src/lib/exchanges/exchange/include/exchange/: exchange.hpp  market_data_feed.hpp
src/lib/modules/: CMakeLists.txt  log_module.cpp  tcp_client_module.cpp
src/lib/modules/include/modules/: log_module.h  tcp_client_module.h
src/lib/modules/include/modules/matching_engine_module/: i_order_handler.h  matching_engine.h  matching_engine_module.h  order_book.h  order_data.h  order_event_processor.h  order_level.h
src/lib/modules/matching_engine_module/: matching_engine.cpp  matching_engine_module.cpp  order_book.cpp  order_data.cpp  order_event_processor.cpp  order_level.cpp
src/lib/socket/: CMakeLists.txt  socket_session_base.cpp
src/lib/socket/include/socket/: server_certificates.hpp  socket_session_base.hpp  ssl_socket_client.hpp  ssl_socket_client_server.hpp  ssl_socket_server.hpp  ssl_socket_session.hpp  tcp_socket_client.hpp  tcp_socket_client_server.hpp  tcp_socket_server.hpp  tcp_socket_session.hpp  web_socket_client.hpp  web_socket_client_server.hpp  web_socket_server.hpp  web_socket_session.hpp
src/lib/web_socket/: CMakeLists.txt  web_socket_client.cpp  web_socket_server.cpp  web_socket_session.cpp
src/lib/web_socket_server/: CMakeLists.txt  tag_map.cpp  web_socket_server.cpp  web_socket_session.cpp
src/lib/web_socket_server/include/web_socket_server/: tag_map.h  web_socket_server.h  web_socket_session.h  web_socket_session_callback.h
src/lib/websocket_server/: CMakeLists.txt  tag_map.cpp  websocket_server.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt
test/common_benchmark/: CMakeLists.txt  fast_map_benchmark.cpp  log_stream_benchmark.cpp  main.cpp
test/common_test/: CMakeLists.txt  lock_less_ring_buffer_test.cpp  main.cpp  ring_buffer_test.cpp
test/decimal_benchmark/: CMakeLists.txt  decimal_benchmark.cpp
test/decimal_test/: CMakeLists.txt  decimal_test.cpp  std_decimal_test.cpp
test/fast_map/: CMakeLists.txt  main.cpp
test/modules_benchmark/: CMakeLists.txt  main.cpp  matching_engine_benchmark.cpp  modules_benchmark.cpp  order_event_processor_benchmark.cpp
test/modules_test/: CMakeLists.txt  main.cpp  order_book_test.cpp  order_eent_procesor_test.cpp
test/object_copy_benchmark/: CMakeLists.txt  object_copy_benchmark.cpp
test/python/web_socket_client/: websocketclient.py
test/share_memory/: CMakeLists.txt  consumer.cpp  main.cpp  publisher.cpp  shared_memory.cpp
test/share_memory/include/shared_memory/: consumer.hpp  publisher.hpp  shared_memory.hpp
test/smart_search_benchmark/: CMakeLists.txt  smart_search_benchmark.cpp
test/web_socket_client_test_app/: CMakeLists.txt  main.cpp
test/web_socket_server_test_app/: CMakeLists.txt  main.cpp  web_socket_server.cpp  web_socket_session.cpp
test/web_socket_server_test_app/include/web_socket_server/: web_socket_callback.h  web_socket_server.h  web_socket_session.h
test/websocket_server_app/: CMakeLists.txt  websocket_server_app.cpp
(+6 files in other folders)
