add_subdirectory(clock)
add_subdirectory(template)
add_subdirectory(lockfree_ringbuffer)
add_subdirectory(meta_programming)
add_subdirectory(new_logger)
add_subdirectory(atomic_queue)
add_subdirectory(tcp_client)
add_subdirectory(tcp_server)
add_subdirectory(ssl_client)
add_subdirectory(ssl_server)
add_subdirectory(web_socket_client)
add_subdirectory(web_socket_server)