find_package(GTest CONFIG REQUIRED)
find_package(benchmark CONFIG REQUIRED)

add_subdirectory(decimal_benchmark)
add_subdirectory(decimal_test)
add_subdirectory(object_copy_benchmark)
add_subdirectory(smart_search_benchmark)
add_subdirectory(common_test)
add_subdirectory(common_benchmark)
add_subdirectory(modules_test)
add_subdirectory(modules_benchmark)
add_subdirectory(web_socket_server_test_app)
add_subdirectory(web_socket_client_test_app)